# GrafikaKomputerowa

./: .gitignore
CIEXYZ/: Cargo.toml  app_state.json
CIEXYZ/src/: bezier.rs  cie.rs  data_loader.rs  main.rs  renderer.rs  serialization.rs
ChroaticityChart/: App.axaml  App.axaml.cs  ChroaticityChart.csproj  Program.cs  app.manifest
ChroaticityChart/Models/: ColorModel.cs  SpectralData.cs
ChroaticityChart/Services/: ColorService.cs
ChroaticityChart/ViewModels/: MianWindowViewModel.cs  SPDViewModel.cs
ChroaticityChart/Views/: MainWindow.axaml  MainWindow.axaml.cs
ChromaticityDiagram/: ChromaticityDiagram.sln
ChromaticityDiagram/ChromaticityDiagram/: App.xaml.cs  ChromaticityDiagram.csproj  CieCanvasTransform.cs  MainWindow.xaml  MainWindow.xaml.cs  Spectrum.cs  SpectrumCurveView.cs  SpectrumPoint.cs
DziezaShapesRust/: Cargo.toml
DziezaShapesRust/src/: app.rs
PROJ4/: CMakeLists.txt  Makefile  Raport projekt 4.md  TODO.txt  compile.txt
PROJ4/shaders/: light_fragment2.glsl  light_fragment_camera.glsl  light_vertex.glsl  mirror_fragment.glsl  mirror_vertex.glsl  spotlight_fragment.glsl
PROJ4/src/: Camera.cpp  Camera.h  Mirror.cpp  Mirror.h  MirrorCamera.cpp  MirrorCamera.h  MirrorSurface.cpp  MirrorSurface.h  Object3D.cpp  Object3D.h  ReflectionBuffer.cpp  ReflectionBuffer.h  Shader.cpp  Shader.h  Spaceship.cpp  Spaceship.h  glad.c  main.cpp  main_mirror.cpp
PROJ4_basic/: CMakeLists.txt  compile.txt
PROJ4_basic/src/: Shader.cpp  Shader.h
Shapes/: Cargo.toml
Shapes/src/: app.rs  main.rs
firstOne/: Cargo.toml
testing/: Cargo.toml
(+17 files in other folders)
